--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ html {
 header {
   margin: auto;
   font-family: "Glaho Caps", sans-serif;
+  margin-right: -7%;
+}
+
+#logo {
+  width: 12%;
+  position: absolute;
+  top: 0%;
+  left: 13%;
 }
 
 ul {
@@ -56,7 +64,7 @@ ul li {
 
 #lang {
   position: absolute;
-  left: 3.5%;
+  left: 8.2%;
 }
 
 #header2-div {
@@ -72,6 +80,8 @@ ul li {
   font-family: "Caps", sans-serif;
   padding: 1.2% 0;
   font-size: 0.92vw;
+  margin-right: 11.5%;
+  width: 70%;
 }
 
 #menu li {
@@ -129,9 +139,8 @@ ul li {
   display: inline-block;
   margin: 1.7% 0.4% 0 0;
 }
-.slider-btn:hover {
-  border-bottom: 5px solid #00b15e;
-  transform: scaleY(1.5);
+.slider-btn:first-child {
+  border-bottom: 6px solid #00b15d;
 }
 
 /* XXXXXXXXXXXXXXX */
@@ -144,14 +153,6 @@ ul li {
 #container h2 {
   font-family: "Caps", sans-serif;
   font-size: 1.5vw;
-}
-
-.border {
-  border-bottom: 5px solid #00b15e;
-  border-radius: 1vw;
-  width: 3%;
-  display: inline-block;
-  margin: 1% 0;
 }
 
 .container-description {
@@ -303,6 +304,7 @@ ul li {
   width: 100%;
   position: relative;
 }
+
 #ad-info {
   box-sizing: border-box;
   position: absolute;
@@ -384,6 +386,7 @@ footer ul p {
   display: block;
   margin: 3% 0 5% 0;
   padding: 3% 0;
+  font-size: 0.8vw;
 }
 
 .footer-item:first-child button {
